@@ -1,0 +1,197 @@
+<?php
+
+    /**
+     * Croatian language file
+     *
+     * @package frog
+     * @subpackage translations
+     *
+     * @author Dejan Andjelkovic <dejan79@gmail.com>
+     * @version Frog 0.9.5
+     */
+
+    return array(
+    	'&#8212; naslijedi &#8212;' => '',
+	'<b>Information!</b> New Frog version available (v. <b>:version</b>)! Visit <a href="http://www.madebyfrog.com/">http://www.madebyfrog.com/</a> to upgrade your version!' => '<b>Obavijest!</b> Nova verzija Frog CMS-a je dostupna (v. <b>:version</b>)! Posjetite <a href="http://www.madebyfrog.com/">http://www.madebyfrog.com/</a> kako biste ažurirali na novu verziju!',
+	'A translatable string with a %param% system.' => 'Niz za prijevod sa %param% sustavom.',
+	'A translatable string.' => 'Niz za prijevod',
+	'Action disabled!' => 'Akcija onemogućena!',
+	'Add' => 'Dodaj',
+	'Add Page' => 'Dodaj Stranicu',
+	'Add Part' => 'Dodaj Dio',
+	'Add Tab' => 'Dodaj Karticu',
+	'Add child' => 'Dodaj dijete',
+	'Add layout' => 'Dodaj izgled',
+	'Add snippet' => 'Dodaj komadić koda',
+	'Add user' => 'Dodaj korisnika',
+	'Admin Site title' => 'Naslov Admin sučelja',
+	'Administration' => 'Administracija',
+	'Administration Theme' => 'Tema Administracije',
+	'Allow HTML in Title' => 'Dopusti HTML u naslovu',
+	'Approve' => 'Odobri',
+	'Are you sure you wish to delete' => 'Jeste li sigurni da želite obrisati',
+	'Are you sure you wish to delete it?' => 'Jeste li sigurni da ovo želite obrisati?',
+	'At least 3 characters. Must be unique.' => 'Minimalno 3 znaka. Mora biti jedinstveno.',
+	'At least 5 characters.' => 'Minimalno 5 znakova',
+	'Body' => 'Tijelo',
+	'Breadcrumb' => 'Mrvice',
+	'By using <strong>&lt;img src="img_path" /&gt;</strong> you can set your company logo instead of a title.' => 'Koristeći <strong>&lt;img src="img_path" /&gt;</strong> možete postaviti vaš logotip umjesto naslova.',
+	'Cancel' => 'Odustani',
+	'Close' => 'Zatvori',
+	'Comments' => 'Komentari',
+	'Confirm Password' => 'Potvrdi Lozinku',
+	'Content-Type' => 'Content-Type',
+	'Create Core template' => 'Kreiraj predložak Jezgre',
+	'Create Plugin templates' => 'Kreiraj predložak Plugin-a',
+	'Created date' => 'Datum kreiranja',
+	'Default Filter' => 'Zadani Filter',
+	'Default Status' => 'Zadani Status',
+	'Default tab' => 'Zadana kartica',
+	'Delete' => 'Obrisati',
+	'Delete the current tab?' => 'Obriši trenutnu karticu?',
+	'Description' => 'Opis',
+	'Determines whether or not HTML code is allowed in a page\'s title.' => 'Određuje da li je ili nije HTML kod dopušten u naslovu stranica.',
+	'Draft' => 'Skica',
+	'Drag and Drop' => 'Povuci i Ispusti',
+	'Drag to Copy' => 'Povuci za kopiranje',
+	'E-mail' => 'E-mail',
+	'Edit Page' => 'Uredi Stranicu',
+	'Edit comment' => 'Uredi komentar',
+	'Edit layout' => 'Uredi izgled',
+	'Edit snippet' => 'Uredi komadić koda',
+	'Edit user' => 'Uredi korisnika',
+	'Email' => 'Email',
+	'Email address' => 'Email adresa',
+	'Enabled' => 'Omogućeno',
+	'Feedback' => 'Povratna informacija',
+	'Filter' => 'Filter',
+	'Forgot password' => 'Zaboravljena lozinka',
+	'Forgot password?' => 'Zaboravili ste lozinku?',
+	'Help us <a href=":url">translate Frog</a>!' => 'Pomozite nam <a href=":url">prevesti Frog</a>!',
+	'Hidden' => 'Skriveno',
+	'Just replace <b>snippet</b> by the snippet name you want to include.' => 'Jednostavno zamijenite <b>komadić</b> sa nazivom komadića koji želite ubaciti u kod',
+	'Keywords' => 'Ključne riječi',
+	'Language' => 'Jezik',
+	'Last updated by' => 'Zadnje ažuriranje',
+	'Latest' => 'Zadnje',
+	'Layout' => 'Izgled',
+	'Layout <b>:name</b> has been deleted!' => 'Izgled <b>:name</b> je obrisan!',
+	'Layout <b>:name</b> has not been deleted!' => 'Izgled <b>:name</b> nije obrisan!',
+	'Layout <b>:name</b> is used! It CAN NOT be deleted!' => 'Izgled <b>:name</b> se koristi! NE MOŽE se obrisati!',
+	'Layout has been added!' => 'Izgled je dodan!',
+	'Layout has been saved!' => 'Izgled je spremljen!',
+	'Layout has not been added. Name must be unique!' => 'Izgled nije dodan. Naziv mora biti jedinstven!',
+	'Layout has not been saved. Name must be unique!' => 'Izgled nije spremljen. Naziv mora biti jedinstven!',
+	'Layout not found!' => 'Izgled nije pronađen!',
+	'Layouts' => 'Izgledi',
+	'Leave password blank for it to remain unchanged.' => 'Ostavite polje za lozinku praznim ukoliko ju ne želite mijenjati.',
+	'Log Out' => 'Odjava',
+	'Login' => 'Prijava',
+	'Login failed. Please check your login data and try again.' => 'Prijava nije uspjela. Provjerite podatke za prijavu i pokušajte ponovno.',
+	'Login:' => 'Prijava:',
+	'Memory usage:' => 'Korištenje memorije:',
+	'Metadata' => 'Meta podaci',
+	'Modify' => 'Izmjeniti',
+	'Name' => 'Naziv',
+	'New Layout' => 'Novi Izgled',
+	'New Snippet' => 'Novi Komadić koda',
+	'New User' => 'Novi Korisnik',
+	'No comments found.' => 'Komentari nisu pronađeni.',
+	'Only for filter in pages, NOT in snippets' => 'Samo za filtere u stranicama, NE u komadićima koda',
+	'Optional. Please use a valid e-mail address.' => 'Opcionalno. Koristite valjanu e-mail adresu.',
+	'Page' => 'Stranica',
+	'Page :title has been deleted!' => 'Stranica :title je obrisana!',
+	'Page :title has not been deleted!' => 'Stranica :title nije obrisana!',
+	'Page Title' => 'Naslov Stranice',
+	'Page Type' => 'Tip Stranice',
+	'Page has been saved!' => 'Stranica je spremljena!',
+	'Page has not been saved!' => 'Stranica nije spremljena!',
+	'Page not found!' => 'Stranica nije pronađena!',
+	'Page options' => 'Opcije stranice',
+	'Page rendered in' => 'Stranica je generirana za',
+	'Pages' => 'Stranice',
+	'Password' => 'Lozinka',
+	'Password and Confirm are not the same or too small!' => 'Lozinka i potvrda lozinke nisu iste ili su prekratke!',
+	'Plugin' => 'Plugin',
+	'Plugins' => 'Plugin-ovi',
+	'Protected' => 'Zaštićeno',
+	'Published' => 'Objavljeno',
+	'Published date' => 'Datum objave',
+	'Reject' => 'Odbaci',
+	'Remember me for 14 days' => 'Zapamti me na 14 dana',
+	'Remove Layout' => 'Ukloni Izgled',
+	'Remove Tab' => 'Ukloni Karticu',
+	'Remove page' => 'Ukloni stranicu',
+	'Required.' => 'Potrebno',
+	'Reviewed' => 'Pregledano',
+	'Roles' => 'Uloge',
+	'Roles restrict user privileges and turn parts of the administrative interface on or off.' => 'Uloge ograničavaju korisničke ovlasti i isključuju ili uključuju dijelove administracijskog sučelja.',
+	'Save' => 'Spremi',
+	'Save and Continue Editing' => 'Spremi i Nastavi uređivati',
+	'Send password' => 'Pošalji lozinku',
+	'Settings' => 'Postavke',
+	'Settings has been saved!' => 'Postavke su spremljene!',
+	'Show Calendar' => 'Pokaži Kalendar',
+	'Slug' => 'Slug',
+	'Snippet' => 'Komadić koda',
+	'Snippet :name has been deleted!' => 'Komadić koda :name je obrisan!',
+	'Snippet :name has been saved!' => 'Komadić koda :name je spremljen!',
+	'Snippet :name has not been deleted!' => 'Komadić koda :name nije obrisan!',
+	'Snippet :name has not been saved. Name must be unique!' => 'Komadić koda :name nije spremljen. Naziv mora biti jedinstven!',
+	'Snippet has been added!' => 'Komadić koda je dodan!',
+	'Snippet has not been added. Name must be unique!' => 'Komadić koda nije dodan. Naziv mora biti jedinstven!',
+	'Snippet not found!' => 'Komadić koda nije pronađen!',
+	'Snippets' => 'Komadići koda',
+	'Snippets are generally small pieces of content which are included in other pages or layouts.' => 'Komadići koda su manji dijelovi sadržaja koji su uključeni u druge stranice ili izglede.',
+	'Status' => 'Status',
+	'Tag to use this snippet' => 'Oznaka za korištenje ovog komadića koda',
+	'Tags' => 'Oznake',
+	'Thank you for using' => 'Hvala što koristite',
+	'The avatars are automatically linked for those with a <a href="http://www.gravatar.com/" target="_blank">Gravatar</a> (a free service) account.' => 'Avatari se automatski povezuju sa <a href="http://www.gravatar.com/" target="_blank">Gravatar</a> (besplatan servis) računom.',
+	'This allows you to specify which tab (controller) you will see by default after login.' => 'Ovo vam omogućuje da odredite koja kartica (kontroler) će biti zadana (prva vidljiva) nakon prijave.',
+	'This plugin CANNOT be enabled! It requires Frog version :v.' => 'Ovaj plugin se NE MOŽE omogućiti! Zahtjeva verziju Frog-a :v.',
+	'This will change your Administration theme.' => 'Ovo će izmjeniti temu Administracijskog sučelja.',
+	'This will set your language for the backend.' => 'Ovo će izmjeniti jezik sučelja.',
+	'Use layouts to apply a visual look to a Web page. Layouts can contain special tags to include
+  page content and other elements such as the header or footer. Click on a layout name below to
+  edit it or click <strong>Remove</strong> to delete it.' => 'Koristite izglede kako biste izmjenili i postavili vizualni izgled vaše stranice. Izgledi mogu sadržavati posebne oznake kako bi uključili sadržaj stranica i druge elemente kao što su header i footer. Kliknite na naziv izgleda za uređivanje ili <strong>Ukloni</strong> da biste ga obrisali.',
+	'User <strong>:name</strong> has been deleted!' => 'Korisnik <strong>:name</strong> je obrisan!',
+	'User <strong>:name</strong> has not been deleted!' => 'Korisnik <strong>:name</strong> nije obrisan!',
+	'User has been added!' => 'Korisnik je dodan!',
+	'User has been saved!' => 'Korisnik je spremljen!',
+	'User has not been added!' => 'Korisnik nije dodan!',
+	'User has not been saved!' => 'Korisnik nije spremljen!',
+	'User not found!' => 'Korisnik nije pronađen!',
+	'Username' => 'Korisničko ime',
+	'Username must contain a minimum of 3 characters!' => 'Korisničko ime mora sadržavati minimalno 3 znaka!',
+	'Users' => 'Korisnici',
+	'Version' => 'Verzija',
+	'View Site' => 'Vidi Stranicu',
+	'View this page' => 'Pregledaj ovu stranicu',
+	'Website' => 'Stranica',
+	'What is a Layout?' => 'Što je Izgled?',
+	'What is a Snippet?' => 'Što je Komadić koda?',
+	'When enabled, only users who are an administor can edit the page.' => 'Kada je omogućeno, samo korisnici koji administriraju mogu uređivati sadržaj stranice.',
+	'When enabled, users have to login before they can view the page.' => 'Kada je omogućeno, korisnici se moraju prijaviti kako bi vidjeli stranicu.',
+	'Where do the avatars come from?' => 'Odakle dolaze avatari?',
+	'You are currently logged in as' => 'Trenutno ste prijavljeni kao',
+	'You do not have permission to access the requested page!' => 'Nemate dovoljno ovlasti za pristup traženoj stranici!',
+	'You have to specify a content-type!' => 'Morate odrediti content-type!',
+	'You have to specify a name!' => 'Morate odrediti naziv!',
+	'You have to specify a title!' => 'Morate odrediti naslov!',
+	'by' => 'od',
+	'copy' => 'kopiraj',
+	'error' => 'greška',
+	'inherit' => 'naslijedi',
+	'latest' => 'zadnje',
+	'n/a' => 'n/a',
+	'none' => 'ništa',
+	'not required' => 'nije potrebno',
+	'on' => 'u',
+	'or' => 'ili',
+	'reorder' => 'preuredi',
+	'required' => 'potrebno',
+	'seconds' => 'sekundi',
+	'unknown' => 'nepoznato',
+	'website:' => 'stranica',
+    );
