@@ -1,0 +1,44 @@
+<?php
+
+    /**
+     * Croatian file for plugin file_manager
+     *
+     * @package frog
+     * @subpackage plugin.file_manager.translations
+     *
+     * @author Dejan Andjelkovic <dejan79@gmail.com>
+     * @version Frog 0.9.5
+     */
+
+    return array(
+    	'A possible hack attempt was detected.' => 'Detektiran je mogući upad hakera.',
+	'Action' => 'Akcija',
+	'Are you sure you wish to delete' => 'Jeste li sigurni da želite obrisati',
+	'Cancel' => 'Odustani',
+	'Change mode' => 'Promjeni mod',
+	'Close' => 'Zatvori',
+	'Create' => 'Kreiraj',
+	'Create new directory' => 'Kreiraj novu mapu',
+	'Create new file' => 'Kreiraj novu datoteku',
+	'Directory :name has not been created!' => 'Mapa :name nije kreirana!',
+	'Directory is not writable! File has not been saved!' => 'U mapu se ne može zapisivati! Datoteka nije spremljena!',
+	'File' => 'Datoteka',
+	'File :name has been created with success!' => 'Datoteka :name je uspješno kreirana!',
+	'File :name has not been created!' => 'Datoteka :name nije kreirana!',
+	'File has been saved with success!' => 'Datoteka je uspješno spremljena!',
+	'File has not been uploaded!' => 'Datoteka nije učitana!',
+	'File is not writable! File has not been saved!' => 'U datoteku se ne može zapisivati! Datoteka nije spremljena!',
+	'File or directory not found!' => 'Datoteka ili mapa nisu pronađene!',
+	'Modify' => 'Izmjenjeno',
+	'Permission denied!' => 'Dozvola je odbijena!',
+	'Permissions' => 'Dozvole',
+	'Rename' => 'Preimenuj',
+	'Save' => 'Spremi',
+	'Save and Continue Editing' => 'Spremi i Nastavi uređivati',
+	'Size' => 'Veličina',
+	'Upload' => 'Učitaj',
+	'Upload file' => 'Učitaj datoteku',
+	'You do not have permission to access the requested page!' => 'Nemate ovlasti za pristup stranici!',
+	'or' => 'ili',
+	'overwrite it?' => 'prepiši',
+    );
